Skills tab fixed so that it's showing on mobile. Line height of home screen text five also reduced from 3rem to 2.5rem

--- a/frontend/src/App/styles/base/_typography.scss
+++ b/frontend/src/App/styles/base/_typography.scss
@@ -137,7 +137,7 @@
 
     &--5 {
       color: $grey-5;
-      line-height: 3rem;
+      line-height: 2.5rem;
     }
 
     &--im {
