--- a/frontend/src/App/styles/components/_skillsFigure.scss
+++ b/frontend/src/App/styles/components/_skillsFigure.scss
@@ -24,7 +24,6 @@
 	}
 	@media (max-width: 950px) {
 		width: 100%;
-		height: 100%;
 		margin-bottom: 10rem;
 	}
 }
